<resources xmlns:tools="http://schemas.android.com/tools">

    <!-- Common Strings -->
    <string name="quote">\"%1$s\"</string>
    <string name="score_rank">Score: %1$s | Rank: %2$s</string>

    <!-- Main Activity -->
    <plurals name="achievement_chart_hints">
        <!-- Zero quantity does not work as expected, 0 defaults to "other." Keeping it here in case I forget. -->
        <item quantity="zero">No users have earned 1 achievement</item>
        <item quantity="one">%1$d user has earned 1 achievement</item>
        <item quantity="other">%1$d users have earned 1 achievement</item>
    </plurals>
    <plurals name="achievements_chart_hints">
        <item quantity="zero">No users have earned %2$d achievements</item>
        <item quantity="one">%1$d user has earned %2$d achievements</item>
        <item quantity="other">%1$d users have earned %2$d achievements</item>
    </plurals>
    <string name="app_name">RetroAchievements</string>
    <string name="home_screen_login_help">Tap to log in</string>

    <!-- Navigation Drawer -->
    <string name="login_prompt">Click here to log in</string>
    <string name="nav_home">Home</string>
    <string name="nav_lists">Game Lists</string>
    <string name="nav_rankings">Rankings</string>
    <string name="nav_about">About</string>

    <!-- Home Fragment -->
    <string name="nav_settings">Settings</string>
    <string name="game_stats">🏆 %1$d of %2$d\n(%3$d/%4$d)</string>

    <!-- List Fragment -->
    <string name="view_more">View More</string>
    <string name="search_games_tip">Game title</string>

    <!-- Rankings Fragment -->
    <string name="top_users">Top 10 Users</string>

    <!-- Leaderboards Fragment -->
    <string name="no_games">No Games</string>
    <string name="score_ratio_format"><![CDATA[%1$s <font color="0xFFFFFF">(%2$s)</font>]]></string>
    <string name="title">Title</string>
    <string name="console_parens">(%1$s)</string>

    <!-- Settings Fragment -->
    <string name="leaderboards_games">Leaderboards</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_category_account">Account</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_current_theme">Current Theme: %1$s</string>
    <string name="settings_toggle_console">Hide Consoles with 0 Games</string>
    <string name="settings_toggle_console_lag_warning">Warning, enabling this setting can take a while.</string>
    <string name="settings_toggle_game">Hide Games with 0 Achievements</string>
    <string name="settings_toggle_game_lag_warning">This feature is experimental and would likely lag more.</string>
    <string name="settings_no_current_user">Not logged in.</string>
    <string name="settings_current_user">Currently logged in as: %1$s</string>
    <string name="settings_log_out">Log Out</string>

    <!-- About Fragment -->
    <string name="about_version">RetroAchievements v0.0.1</string>
    <string name="about_disclaimer">The RetroAchievements app is in no way affiliated with the
        <a href="https://retroachievements.org/">RetroAchievements</a> website. All images and other
        assets belong to their respective owners, and this app makes no claims of ownership of any
        assets.
    </string>
    <string name="about_developer">This app was developed by Michael H.
        (<a href="https://retroachievements.org/user/KobraKid1337">RA:KobraKid1337</a>)
        as a personal project. You can find his other works on
        <a href="https://github.com/KobraKid">Github</a>.
        <a href="https://venmo.com/Michael-Huyler">Click here</a> if you are
        enjoying the app and would like to contribute to the developer.
        \nThank you for your consideration and I hope you continue to enjoy this app!
    </string>
    <string name="about_credits_1">RetroAchievements uses the
        <a href="https://github.com/quiph/RecyclerView-FastScroller">RecyclerView&#8209;FastScroller</a>
        library by <a href="https://github.com/quiph">Quiph</a>,
        which is licensed under the Apache License Version 2.0.
    </string>
    <string name="about_credits_2">RetroAchievements uses the
        <a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart</a>
        library by <a href="https://github.com/PhilJay">Philipp Jahoda</a>,
        which is licensed under the Apache License Version 2.0.
    </string>
    <string name="about_credits_3">RetroAchievements uses the
        <a href="https://jsoup.org">jsoup</a>
        library, which is licensed under the MIT License.
    </string>
    <string name="about_credits_4">RetroAchievements uses the
        <a href="https://square.github.io/picasso">Picasso</a>
        library, which is licensed under the Apache License Version 2.0.
    </string>
    <string name="about_credits_5">RetroAchievements uses the
        <a href="https://github.com/yuriy-budiyev/circular-progress-bar">Circular Progress Bar</a>
        library by <a href="https://github.com/yuriy-budiyev">Yuriy Budiyev</a>,
        which is licensed under the MIT License.
    </string>

    <!-- User Summary -->
    <string name="user_rank">(#%1$s)</string>
    <string name="user_points">Points: %1$s</string>
    <string name="user_ratio">RetroRatio: %1$s</string>
    <string name="user_joined">Member since: %1$s</string>

    <!-- Recent Games -->
    <string name="settings_apply">Apply</string>

    <!-- Game Details -->
    <string name="recent_games_title">Recent Games</string>
    <string name="published">Published by: %1$s</string>
    <string name="developed">Developed by: %1$s</string>
    <string name="genre">Genre: %1$s</string>
    <string name="released">First Released: %1$s</string>
    <string name="completion">%1$s%% complete</string>
    <string name="achievement_summary_title">%1$s (%2$s) (%3$s)</string>
    <string name="achievement_distribution">Achievement Distribution</string>
    <string name="images">Images</string>
    <string name="image_box_art">Box Art</string>
    <string name="image_game_title">Title Screen</string>
    <string name="image_game_ingame">In-game</string>
    <string name="forum" tools:ignore="TypographyEllipsis">Open Forum Page...</string>
    <string name="webpage" tools:ignore="TypographyEllipsis">View on RetroAchievements...</string>

    <!-- Achievement Summary -->
    <string name="achievements">Achievements</string>
    <string name="no_achievements">No Achievements</string>
    <string name="progress">Progress</string>
    <string name="points">Points</string>
    <string name="true_points">True Points</string>
    <string name="percent">%1$d%%</string>
    <string name="diminished_percent">(%1$d%%)</string>
    <string name="diminished_text">(%1$s)</string>
    <string name="out_of">/ %1$s</string>

    <!-- Achievement Details -->
    <string name="won_by">won by %1$s (%2$s) of %3$d (%4$s%%)</string>
    <string name="date_earned_upper">Earned on %1$s</string>
    <string name="date_earned_lower">earned on %1$s</string>
    <string name="earned_by_details" tools:ignore="PluralsCandidate">Earned by %1$s of %2$d players (%3$s%%)</string>
    <string name="earned_by_hc_details">Earned by %1$s HARDCORE players (%2$s%%)</string>
    <string name="not_yet_earned">You have not yet earned this achievement</string>
    <string name="metadata">Created by %1$s on %2$s\nLast modified %3$s</string>

    <!-- Leaderboards -->
    <string name="leaderboard_title_template">%1$s (%2$s)</string>
    <string name="type_score">🏆 %1$s | %2$s participants</string>
    <string name="type_time">⏳ %1$s | %2$s participants</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="login_username">Username</string>
    <string name="login_api_key">API Key</string>
    <string name="api_detect_dialog_title">Detect API Key</string>
    <string name="api_detect_dialog_desc">You can find your unique 32-character API Key by logging in at retroachievements.org/APIDemo.php</string>
    <string name="api_detect_go">Take me there</string>
    <string name="detect_api_key">Detect API Key</string>
    <string name="new_login_welcome">Hello, %1$s. Successfully logged in.</string>

    <!-- ImageView Accessibility Content Descriptions -->
    <string name="cd_user_icon">User icon</string>
    <string name="cd_console_icon">Console icon</string>
    <string name="cd_game_icon">Game icon</string>
    <string name="cd_leaderboard_icon">Leaderboard icon</string>
    <string name="cd_masteries">Mastered games</string>
    <string name="cd_achievement_details_badge">Achievement details badge</string>
    <string name="cd_achievement_summary_badge">Achievement summary badge</string>
    <string name="cd_achievement_summary_page">Achievement summary page</string>
    <string name="cd_achievement_distribution_page">Achievement distribution page</string>
    <string name="cd_game_images_page">Game images page</string>
    <string name="cd_game_comments_page">Game comments page</string>
    <string name="cd_api_help_button">API auto-detection help button</string>

    <string name="hello_blank_fragment" tools:ignore="UnusedResources">Hello blank fragment</string>

</resources>
