<?xml version="1.0" encoding="utf-8"?><!-- Navigation Drawer Menu -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_fragment"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_lists_fragment"
            android:icon="@drawable/ic_view_list"
            android:title="@string/nav_lists" />
        <item
            android:id="@+id/nav_leaderboards_fragment"
            android:icon="@drawable/ic_insert_chart"
            android:title="@string/nav_leaderboards" />
        <item
            android:id="@+id/nav_settings_fragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>

</menu>