<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.MainActivity">

    <View
        android:id="@+id/settings_applying_fade"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.6"
        android:background="?attr/colorError"
        android:clickable="true"
        android:elevation="2dp"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/settings_applying"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings_appearance_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/settings_category_appearance"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/settings_theme_subheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/settings_theme"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_appearance_heading" />

            <TextView
                android:id="@+id/settings_current_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textAlignment="viewEnd"
                android:textColor="?attr/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/settings_theme_subheading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/settings_theme_subheading"
                tools:text="Current Theme: 2016" />


            <Spinner
                android:id="@+id/settings_theme_dropdown"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/settings_button_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_theme_subheading"
                tools:listitem="@android:layout/simple_spinner_dropdown_item" />

            <CheckBox
                android:id="@+id/settings_hide_consoles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/settings_toggle_console"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_theme_dropdown" />

            <TextView
                android:id="@+id/settings_hide_consoles_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/settings_toggle_console_lag_warning"
                android:textColor="?attr/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_hide_consoles" />

            <TextView
                android:id="@+id/settings_hide_games_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/settings_toggle_game_lag_warning"
                android:textColor="?attr/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_hide_games" />

            <CheckBox
                android:id="@+id/settings_hide_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/settings_toggle_game"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_hide_consoles_warning" />

            <View
                android:id="@+id/settings_appearance_bottom_div"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_hide_games_warning" />

            <TextView
                android:id="@+id/settings_account_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/settings_category_account"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_appearance_bottom_div" />

            <Button
                android:id="@+id/settings_logout_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/settings_log_out"
                app:layout_constraintBottom_toBottomOf="@+id/settings_current_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/settings_button_guideline"
                app:layout_constraintTop_toTopOf="@+id/settings_current_user" />

            <View
                android:id="@+id/settings_account_bottom_div"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_logout_button" />

            <Button
                android:id="@+id/settings_apply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/settings_apply"
                app:layout_constraintBottom_toBottomOf="@+id/settings_theme_dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/settings_button_guideline"
                app:layout_constraintTop_toTopOf="@+id/settings_theme_dropdown" />

            <TextView
                android:id="@+id/settings_current_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/settings_button_guideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_account_heading"
                tools:text="Currently signed in as: KobraKid1337" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/settings_button_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.75"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>